--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -30,7 +30,8 @@
     <!-- 카테고리 조회 -->
     <div>
         <form id="form">
-            <select name="categoryId" class="form-select form-select-sm" aria-label=".form-select-sm example" id="select">
+            <select name="categoryId" class="form-select form-select-sm" aria-label=".form-select-sm example"
+                id="select">
                 <option value="full" selected>전체</option>
             </select>
         </form>
@@ -40,8 +41,8 @@
 
     </div>
 
-    <button onclick="goPost()" type="button" class="btn btn-outline-secondary">추가</button>
-
+   
+        <button onclick="goPost()" type="button" class="btn btn-outline-secondary">추가</button>
 
 </body>
 <script src="admin.js"> </script>
