--- a/src/views/adminPost/adminPost.html
+++ b/src/views/adminPost/adminPost.html
@@ -29,6 +29,7 @@
               <input type="text" name="title" id="title" class="form-control" aria-label="Sizing example input"
                 aria-describedby="inputGroup-sizing-default">
             </div>
+
             <div class="input-group mb-3">
               <span class="input-group-text" id="inputGroup-sizing-default">카테고리</span>
               <input type="text" name="categoryId" id="category" class="form-control" aria-label="Sizing example input"
@@ -38,7 +39,7 @@
 <!-- ---------------------------------------------- -->
             <div class="input-group mb-3">
               <label class="input-group-text" for="inputGroupSelect01">카테고리</label>
-              <select class="form-select categories" id="inputGroupSelect01">
+              <select class="form-select category" id="inputGroupSelect01">
                
                 
               </select>
