--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/public/css/public.css" />
     <link rel="stylesheet" href="home.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -38,6 +39,8 @@
     <section>
       <div class="pageContainer"></div>
     </section>
+    <hr />
+    <footer class="mb-3" id="footer"></footer>
     <script src="home.js"></script>
     <script src="/public/js/template-renderer.js"></script>
   </body>
