--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -11,6 +11,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/public/css/public.css" />
     <link rel="stylesheet" href="product-detail.css" />
   </head>
   <body>
@@ -27,12 +28,12 @@
         <div class="row mt-4">
           <div class="col-1"></div>
           <div class="col-10" id="imageContainer">
-            <div class="card mb-3">
+            <div class="card mb-3 border shadow-lg">
               <div class="row g-0 p-3">
                 <div class="col-md-6 p-2 d-flex align-items-center">
                   <img
                     src=""
-                    class="img-fluid rounded-start w-100"
+                    class="img-fluid rounded-start w-100 rounded shadow-lg"
                     id="image"
                   />
                 </div>
@@ -149,11 +150,6 @@
       </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
     <script src="/public/js/template-renderer.js"></script>
     <script src="product-detail.js"></script>
     <script src="handle-cart.js"></script>
