--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -4,44 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/public/css/public.css" />
-    <link rel="stylesheet" href="home.css" />
+    <title></title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/public/css/public.css" />
+    <link rel="stylesheet" href="home.css" />
   </head>
 
   <body>
     <nav
-      class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly"
+      class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
       id="nav"
     ></nav>
 
     <!-- 메인2 상품들 -->
-    <section>
-      <article class="recommend text-center">
+    <section class="">
+      <!-- <article class="recommend text-center">
         <span class="">이 달의 추천 상품(뺄 수도 있음)</span>
-      </article>
-
-      <div class="productContainer container mt-5">
-        <div class="container-fluid text-center">
-          <div
-            class="row d-flex justify-content-evenly w-90"
-            id="productContainer"
-          ></div>
+      </article> -->
+      <div class="container mt-5">
+        <div
+          class="container-fluid d-flex text-center justify-content-center ps-5"
+        >
+          <div class="row d-flex flex-wrap w-90" id="productContainer"></div>
         </div>
       </div>
     </section>
-    <section>
+    <!-- <section>
       <div class="pageContainer"></div>
-    </section>
-    <hr />
-    <footer class="mb-3" id="footer"></footer>
-    <script src="home.js"></script>
+    </section> -->
+    <footer
+      class="container-fluid text-center mt-auto py-3"
+      id="footer"
+    ></footer>
     <script src="/public/js/template-renderer.js"></script>
+    <script src="home.js"></script>
   </body>
 </html>
