--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -11,8 +11,13 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/public/css/public.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="product-detail.css" />
+    <link rel="stylesheet" href="/public/css/public.css" />
   </head>
   <body>
     <nav
@@ -24,7 +29,7 @@
         <div class="row mt-4">
           <div class="col-12"><h2>상품 상세 정보</h2></div>
         </div>
-        <hr />
+        <hr class="my-1" />
         <div class="row mt-4">
           <div class="col-1"></div>
           <div class="col-10" id="imageContainer">
@@ -126,9 +131,8 @@
                       <input
                         type="text"
                         value="1"
-                        class="m-0"
+                        class="m-0 text-center"
                         id="count"
-                        data-id=""
                       />
                       <p class="btn btn-secondary" id="plus">+</p>
                     </div>
@@ -149,7 +153,7 @@
         </div>
       </div>
     </div>
-
+    <footer class="mb-3 fixed-bottom" id="footer"></footer>
     <script src="/public/js/template-renderer.js"></script>
     <script src="product-detail.js"></script>
     <script src="handle-cart.js"></script>
