feat:장바구니 삭제시 로직

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -33,13 +33,13 @@
             <div id="cartSummery">
                 <dl>
                     <dt>상품수</dt>
-                    <dd></dd>
+                    <dd id="itemCountAll"></dd>
                     <dt>상품금액</dt>
-                    <dd></dd>
+                    <dd id="itemPriceAll"></dd>
                     <dt>배송비</dt>
-                    <dd></dd>
+                    <dd>3000</dd>
                     <dt>총 결제금액</dt>
-                    <dd></dd>
+                    <dd id="totalPrice"></dd>
                 </dl>
             </div>
         </div>
