--- a/src/views/adminPost/adminPost.html
+++ b/src/views/adminPost/adminPost.html
@@ -6,13 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="adminPost.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
   <title>Document</title>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
@@ -31,22 +27,11 @@
             </div>
 
             <div class="input-group mb-3">
-              <span class="input-group-text" id="inputGroup-sizing-default">카테고리</span>
-              <input type="text" name="categoryId" id="category" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default">
-            </div>
-
-<!-- ---------------------------------------------- -->
-            <div class="input-group mb-3">
               <label class="input-group-text" for="inputGroupSelect01">카테고리</label>
-              <select class="form-select category" id="inputGroupSelect01">
-               
-                
+              <select class="form-select select" id="inputGroupSelect01">
+                              
               </select>
             </div>
-            <!-- ---------------------------------------------- -->
-
-
 
             <div class="input-group mb-3">
               <span class="input-group-text" id="inputGroup-sizing-default">제조사</span>
@@ -86,8 +71,6 @@
             <input type="text" class="form-control" id="categoryName" aria-label="Sizing example input"
               aria-describedby="inputGroup-sizing-default">
             <input id="btnInput" type="submit" value="등록">
-
-
 
           </div>
         </form>
