--- a/src/views/adminUser/adminUser.html
+++ b/src/views/adminUser/adminUser.html
@@ -45,7 +45,7 @@
                         </tr>
                     </tbody>
                 </table>
-
+                <button type="button" id="roleBtn" class="btn btn-danger">권한 변경</button>
                 <div class="col-0.2">
 
                 </div>
