feat(api): 로그인, 회원가입

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -46,16 +46,16 @@
       class="container-fluid text-center mt-auto py-3"
       id="footer"
     ></footer>
-    <div id="toPrevious" class="position-fixed top-50 start-0">
-      <a href="">
+    <div id="toPrevious" class="position-fixed top-50 start-0 d-none">
+      <a href="" id="previousPage">
         <i
           class="fa-sharp fa-solid fa-arrow-left text-secondary"
           id="left-arrow"
         ></i>
       </a>
     </div>
-    <div id="toNext" class="position-fixed top-50 end-0">
-      <a href="">
+    <div id="toNext" class="position-fixed top-50 end-0 d-none">
+      <a href="" id="nextPage">
         <i
           class="fa-sharp fa-solid fa-arrow-right text-secondary"
           id="right-arrow"
