--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -1,18 +1,24 @@
-.login-form-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 85vh;
+input[type='text'],
+input[type='email'],
+input[type='password'],
+input[type='text'],
+input[type='tel'] {
+  font-size: 24px;
 }
 
-.login-form-box {
-  width: 30rem;
+.label {
+  font-size: 20px;
+  margin-bottom: 12px !important;
+}
+#title {
+  font-size: 36px;
 }
 
-.login-form-box .title {
-  text-align: center;
+#submitButton {
+  font-size: 20px;
+  font-weight: 700;
 }
 
-.login-form-box .button {
-  font-weight: bold;
+#container {
+  margin-top: 150px !important;
 }
