--- a/src/views/register/register.css
+++ b/src/views/register/register.css
@@ -1,23 +1,23 @@
-.register-user-form-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 85vh;
+/* #container input[type='text'],
+#container input[type='email'],
+#container input[type='password'],
+#container input[type='text'],
+#container input[type='tel'] {
+  font-size: 18px;
+} */
+
+.label {
+  font-size: 19px;
+  margin-bottom: 6px !important;
+}
+#title {
+  font-size: 32px;
 }
 
-.register-user-form-box {
-  width: 30rem;
+#submitButton {
+  font-size: 20px;
 }
 
-.register-user-form-box .title {
-  text-align: center;
-}
-
-.register-user-form-box .button {
-  font-weight: bold;
-}
-
-.register-user-form-box .input:focus {
-  border-color: #00d1b2;
-  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+.invalid {
+  border: 1px red solid;
 }
