--- a/src/views/adminUser/adminUser.css
+++ b/src/views/adminUser/adminUser.css
@@ -16,3 +16,27 @@ td{
     overflow:hidden;
     white-space:nowrap;
 }
+
+#roleBtn{
+    margin-left: auto;
+}
+
+ms-5{
+    margin-right: auto;
+}
+
+
+.pageWraper{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .container{
+  flex: 1;
+  }
+  
+  footer{
+    height: 100px;
+  background-color: #D1D4D7;
+  }
