fix: 렌더링 작업중

--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -32,7 +32,7 @@
         <form id="form">
             <select name="categoryId" class="form-select form-select-sm" aria-label=".form-select-sm example"
                 id="select">
-                <option value="full" selected>전체</option>
+                <option value="all" selected>전체</option>
             </select>
         </form>
     </div>
@@ -41,8 +41,8 @@
 
     </div>
 
-   
-        <button onclick="goPost()" type="button" class="btn btn-outline-secondary">추가</button>
+
+    <button onclick="goPost()" type="button" class="btn btn-outline-secondary">추가</button>
 
 </body>
 <script src="admin.js"> </script>
