feat(api): 주문 정보 API 초안 작성

--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -156,6 +156,7 @@
         <div class="col-3"></div>
       </div>
     </div>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <footer class="container-fluid text-center mt-3" id="footer"></footer>
     <script src="/public/js/template-renderer.js"></script>
   </body>
