--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -41,9 +41,9 @@
 
     </div>
 
-
-    <button onclick="goPost()" type="button" class="btn btn-outline-secondary">추가</button>
-
+<div class="addContainer">
+    <button onclick="goPost()" type="button" class="btn btn-outline-secondary add">추가</button>
+</div>
 </body>
 <script src="admin.js"> </script>
 
