--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -41,6 +41,7 @@
                     <dt>총 결제금액</dt>
                     <dd id="totalPrice"></dd>
                 </dl>
+                <button type="button" class="button" id="submitButton">결제하기</button>
             </div>
         </div>
 
