--- a/src/views/adminPost/adminPost.html
+++ b/src/views/adminPost/adminPost.html
@@ -9,7 +9,8 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
+    <script src="adminPost.js" type="module" defer></script>
+  </head>
 
 <body>
   <div class="container text-center">
@@ -113,7 +114,7 @@
   </div>
   </div>
 
-  <script src="adminPost.js"></script>
+  <!-- <script src="adminPost.js" type="module" defer></script> -->
 </body>
 
 </html>
