feat:order.js 생성중

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -19,6 +19,9 @@
         <div id="orderInfoDiv">
             <h2>배송지정보</h2>
             <form id="orderInfoForm">
+                <!-- <label id="checkDefaultCheck">
+
+                </label> -->
                 <label id="nameInput" name="fullName">이름
                     <input class="input" name="email" id="fullNameInput" type="text" placeholder="유재석" autocomplete="on"/>
                 </label>
