--- a/src/views/adminPost/adminPost.html
+++ b/src/views/adminPost/adminPost.html
@@ -9,16 +9,21 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="adminPost.js" type="module" defer></script>
+    <link rel="stylesheet" href="/public/css/public.css" />
   </head>
 
 <body>
+  <nav
+      class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+      id="nav"
+    ></nav>
   <div class="container text-center">
     <div class="row">
-      <div class="col-2">
+      <div class="col-1">
 
       </div>
-      <div class="col-8">
+
+      <div class="col-10">
         <div class="adminContainer">
           <form id="form">
             <div class="input-group mb-3">
@@ -102,19 +107,24 @@
           <input class="btnInput" type="submit" value="수정">
 
         </form>
-      </div>
-        <a class="btn btn-danger ms-5" href="javascript:history.back()">뒤로가기</a>
-
-      </div>
-
+    
     </div>
-    <div class="col-2">
 
-    </div>
+    <a class="btn btn-danger ms-5" href="javascript:history.back()">뒤로가기</a>
+
+    <footer
+    class="container-fluid text-center mt-auto py-3"
+    id="footer"
+  ></footer>
+    
+  </div>
+  <div class="col-1">
+
   </div>
   </div>
 
   <!-- <script src="adminPost.js" type="module" defer></script> -->
 </body>
-
+<script src="/public/js/template-renderer.js"></script>
+<script src="adminPost.js" type="module" defer></script>
 </html>
