--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -1,65 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="home.css" />
-    <link rel="stylesheet" href="/public/css/public.css" />
-  </head>
 
-  <body class="min-vh-100">
-    <nav
-      class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
-      id="nav"
-    ></nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="/public/css/public.css" />
+</head>
 
-    <!-- 메인2 상품들 -->
-    <section class="">
-      <!-- <article class="recommend text-center">
+<body class="min-vh-100">
+  <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
+
+  <!-- 메인2 상품들 -->
+  <section class="">
+    <!-- <article class="recommend text-center">
         <span class="">이 달의 추천 상품(뺄 수도 있음)</span>
       </article> -->
-      <div class="container w-100 mt-5">
-        <div
-          class="container-fluid d-flex text-center justify-content-center ps-5"
-        >
-          <div class="row d-flex" id="productContainer"></div>
-        </div>
+    <div class="container w-100 mt-5">
+      <div class="container-fluid d-flex text-center justify-content-center ps-5">
+        <div class="row d-flex" id="productContainer"></div>
       </div>
-    </section>
-    <footer
-      class="container-fluid text-center mt-auto py-3"
-      id="footer"
-    ></footer>
-    <div id="toPrevious" class="position-fixed top-50 start-0 d-none">
-      <a href="" id="previousPage">
-        <i
-          class="fa-sharp fa-solid fa-arrow-left text-secondary"
-          id="left-arrow"
-        ></i>
-      </a>
     </div>
-    <div id="toNext" class="position-fixed top-50 end-0 d-none">
-      <a href="" id="nextPage">
-        <i
-          class="fa-sharp fa-solid fa-arrow-right text-secondary"
-          id="right-arrow"
-        ></i>
-      </a>
-    </div>
-    <script src="/public/js/template-renderer.js"></script>
-    <script src="home.js"></script>
-  </body>
+  </section>
+  <footer class="container-fluid text-center mt-auto py-3" id="footer"></footer>
+  <div id="toPrevious" class="position-fixed top-50 start-0 d-none">
+    <a href="" id="previousPage">
+      <i class="fa-sharp fa-solid fa-arrow-left text-secondary" id="left-arrow"></i>
+    </a>
+  </div>
+  <div id="toNext" class="position-fixed top-50 end-0 d-none">
+    <a href="" id="nextPage">
+      <i class="fa-sharp fa-solid fa-arrow-right text-secondary" id="right-arrow"></i>
+    </a>
+  </div>
+  <script src="/public/js/template-renderer.js"></script>
+  <script src="home.js"></script>
+</body>
+
 </html>
