--- a/src/views/public/css/public.css
+++ b/src/views/public/css/public.css
@@ -9,8 +9,8 @@
   font-weight: 700;
 }
 
-html {
-  height: 1vh;
+html,body {
+  height: 100%;
 }
 
 #search {
@@ -50,3 +50,23 @@ html {
 #logout:hover {
   cursor: pointer;
 }
+
+.pageWraper{
+ 
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer{
+
+  min-width: 100vh;
+  height: 100px;
+  position: relative;
+  bottom: 0;
+  
+  
+background-color: #D1D4D7;
+}
+
+
