feat:값 가져오기

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -72,7 +72,7 @@
                 <dt>총 결제금액</dt>
                 <dd id="totalPrice"></dd>
             </dl>
-            <button type="button">결제하기</button>
+            <button type="button" id="orderConfirmButton">결제하기</button>
         </div>
 
     </main>
