--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- 헤더 -->
-    <div class="paperWraper">
+    <div class="pageWraper">
         <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
 
         <!-- 카테고리 조회 -->
