--- a/src/views/adminOrder/adminOrder.html
+++ b/src/views/adminOrder/adminOrder.html
@@ -30,7 +30,7 @@
                                 <th scope="col" width="120rem">배송현황</th>
                             </tr>
                         </thead>
-                        <tbody id="userList">
+                        <tbody id="orderList">
                             <tr>
 
                             </tr>
@@ -41,8 +41,8 @@
 
                         <a class="btn btn-danger ms-5" href="javascript:history.back()">뒤로가기</a>
 
-                        <button type="button" id="roleBtn" class="btn btn-danger">배송 중</button>
-                        <button type="button" id="roleBtn" class="btn btn-danger">배송 완료</button>
+                        <button type="button" id="shippingBtn" class="btn btn-danger">배송 중</button>
+                        <button type="button" id="completeBtn" class="btn btn-danger">배송 완료</button>
                         <div class="col-0.2"></div>
                     </div>
                 </div>
