--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -16,6 +16,7 @@
 </head>
 
 <body class="min-vh-100">
+  <div class="pageWraper">
   <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
 
   <!-- 메인2 상품들 -->
@@ -40,8 +41,9 @@
       <i class="fa-sharp fa-solid fa-arrow-right text-secondary" id="right-arrow"></i>
     </a>
   </div>
-  <script src="/public/js/template-renderer.js"></script>
-  <script src="home.js"></script>
-</body>
+</div>
 
+</body>
+<script src="/public/js/template-renderer.js"></script>
+<script src="home.js"></script>
 </html>
