feat: 관리자/마이페이지 랜딩

--- a/src/views/public/css/public.css
+++ b/src/views/public/css/public.css
@@ -3,7 +3,9 @@
   font-size: 18px;
   font-weight: 700 !important;
 }
-
+#nav {
+  height: 100% !important;
+}
 #logo {
   font-size: 32px;
   font-weight: 700;
@@ -51,18 +53,16 @@
   cursor: pointer;
 }
 
-.pageWraper{
+.pageWraper {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
-footer{
+footer {
   min-width: 100vh;
   height: 100px;
   /* position: relative;
   bottom: 0; */
-background-color: #D1D4D7;
+  background-color: #d1d4d7;
 }
-
-
