--- a/src/views/adminpage/adminpage.html
+++ b/src/views/adminpage/adminpage.html
@@ -16,7 +16,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="mypage.css" />
+    <link rel="stylesheet" href="adminpage.css" />
     <link rel="stylesheet" href="/public/css/public.css" />
   </head>
 
@@ -32,14 +32,19 @@
       >
         <div class="row" id="menuContainer">
           <div class="d-flex flex-row">
-            <a href="/mypage/info">
-              <div class="box btn btn-secondary" id="">내 정보 관리</div></a
+            <a href="/admin/add-products">
+              <div class="box btn btn-secondary" id="">상품/카테고리<br /></div
+            ></a>
+            <a href="/admin/users"
+              ><div class="box btn btn-secondary mx-5" id="">
+                회원 정보 관리
+              </div></a
             >
-            <a href="/mypage/order"
-              ><div class="box btn btn-secondary mx-5" id="">배송 조회</div></a
-            >
-            <a href="/cart"
-              ><div class="box btn btn-secondary" id="">장바구니</div></a
+            <a href="/admin/orders"
+              ><div class="box btn btn-secondary" id="">
+                주문/배송<br />
+                관리
+              </div></a
             >
           </div>
         </div>
