--- a/src/views/adminOrder/adminOrder.html
+++ b/src/views/adminOrder/adminOrder.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="adminOrder.css">
     <link rel="stylesheet" href="/public/css/public.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -27,6 +29,7 @@
                                 <th scope="col" width="100rem">이름</th>
                                 <th scope="col" width="150rem">전화번호</th>
                                 <th scope="col" width="350rem">주소</th>
+                                <th scope="col" width="80rem">상품 개수</th>
                                 <th scope="col" width="120rem">배송현황</th>
                             </tr>
                         </thead>
@@ -36,16 +39,22 @@
                             </tr>
                         </tbody>
                     </table>
+
+
                     <div style="display: flex;">
-
-
                         <a class="btn btn-danger ms-5" href="javascript:history.back()">뒤로가기</a>
 
-                        <button type="button" id="shippingBtn" class="btn btn-danger">배송 중</button>
-                        <button type="button" id="completeBtn" class="btn btn-danger">배송 완료</button>
-                        <div class="col-0.2"></div>
+                        <div class="moveBtn">
+                            <button type="button" id="deleveryBtn" class="btn btn-danger">배송 중</button>
+                            <button type="button" id="completeBtn" class="btn btn-danger">배송 완료</button>
+                        </div>
                     </div>
+                   
                 </div>
+
+                <div class="col-0.2"></div>
+
+
             </div>
 
         </div>
@@ -54,7 +63,7 @@
 
     </div>
 </body>
-<script src="adminOrder.js"> </script>
+<script src="adminOrder.js" type="module" defer> </script>
 <script src="/public/js/template-renderer.js"></script>
 
 </html>
