--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -37,7 +37,7 @@
         <footer class="container-fluid text-center mt-auto py-3" id="footer"></footer>
     </div>
 </body>
-<script src="admin.js"> </script>
+<script src="admin.js" type="module" defer> </script>
 <script src="/public/js/template-renderer.js"></script>
 
 </html>
