feat(api): 오더 API 70%

--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -50,6 +50,6 @@
       id="footer"
     ></footer>
     <script src="/public/js/template-renderer.js"></script>
-    <script src="mypage.js"></script>
+    <script type="module" src="mypage.js" defer></script>
   </body>
 </html>
