--- a/src/views/search/search.html
+++ b/src/views/search/search.html
@@ -32,15 +32,15 @@
       <!-- <article class="recommend text-center">
         <span class="">이 달의 추천 상품(뺄 수도 있음)</span>
       </article> -->
-      <div class="container mt-3">
+      <div class="container">
         <div
-          class="container-fluid d-flex text-center justify-content-center ps-5"
+          class="container-fluid d-flex text-center justify-content-center w-100 ps-5"
         >
           <div
-            class="row d-flex flex-col align-items-center"
+            class="row d-flex flex-col align-items-center w-100"
             id="productContainer"
           >
-            <h4 id="resultNotification" class="text-start mb-4 mt-5"></h4>
+            <h4 id="resultNotification" class="text-center mb-4 mt-5"></h4>
           </div>
         </div>
       </div>
