--- a/src/views/search/search.css
+++ b/src/views/search/search.css
@@ -4,24 +4,6 @@
   box-sizing: border-box;
 }
 
-.containerHead {
-  display: flex;
-  justify-content: space-between;
-}
-
-/* 메인 */
-.recommend {
-  font-size: 22px;
-  padding: 40px 0px 20px 20px;
-}
-
-.containerItem {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, minmax(350px, auto));
-}
-
 .navBar li {
   padding-left: 15px;
 }
@@ -37,28 +19,6 @@
 a {
   text-decoration: none;
   color: black;
-}
-
-/* 메인 */
-.recommend {
-  font-size: 22px;
-  padding: 40px 0px 20px 20px;
-}
-
-.containerItem {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, minmax(350px, auto));
-}
-
-@media screen and (max-width: 980px) {
-  .containerItem {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, minmax(250px, auto));
-  }
 }
 
 .card {
@@ -78,4 +38,8 @@ a {
 
 #product-description {
   height: 50px;
+}
+
+#productCard {
+  width: 340px !important;
 }
