--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -31,7 +31,8 @@
         </div>
 
         <div class="addContainer">
-            <button onclick="goPost()" type="button" class="btn btn-outline-secondary add">추가</button>
+            <button type="button" class="btn btn-outline-secondary add" onclick="location.href='/admin/post'">추가</button>
+           
         </div>
     
         <footer class="container-fluid text-center mt-auto py-3" id="footer"></footer>
