--- a/src/views/adminPost/adminPost.html
+++ b/src/views/adminPost/adminPost.html
@@ -23,7 +23,7 @@
        
           <div class="adminContainer">
             <form id="form">
-              <span>상품 등록</span>
+              <span>상품 등록 & 수정</span>
               <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">제품명</span>
                 <input type="text" name="title" id="title" class="form-control" aria-label="Sizing example input"
