--- a/src/views/adminpage/adminpage.html
+++ b/src/views/adminpage/adminpage.html
@@ -25,36 +25,41 @@
       class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
       id="nav"
     ></nav>
-
-    <section class="container w-100 mt-5">
-      <div
-        class="container-fluid d-flex text-center justify-content-center ps-5"
-      >
-        <div class="row" id="menuContainer">
-          <div class="d-flex flex-row">
+    <div class="container">
+      <div class="container-fluid mt-5">
+        <div class="row mt-5">
+          <div class="col-6 d-flex justify-content-center">
+            <a href="/admin/products">
+              <div class="box btn btn-secondary" id="">상품 조회</div>
+            </a>
+          </div>
+          <div class="col-6 d-flex justify-content-center">
             <a href="/admin/add-products">
-              <div class="box btn btn-secondary" id="">상품/카테고리<br /></div
-            ></a>
-            <a href="/admin/users"
-              ><div class="box btn btn-secondary mx-5" id="">
-                회원 정보 관리
-              </div></a
-            >
-            <a href="/admin/orders"
-              ><div class="box btn btn-secondary" id="">
-                주문/배송<br />
-                관리
-              </div></a
-            >
+              <div class="box btn btn-secondary" id="">
+                상품/카테고리<br />관리
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-6 d-flex justify-content-center">
+            <a href="/admin/users">
+              <div class="box btn btn-secondary" id="">회원 관리</div>
+            </a>
+          </div>
+          <div class="col-6 d-flex justify-content-center">
+            <a href="/admin/orders">
+              <div class="box btn btn-secondary" id="">주문/배송<br />관리</div>
+            </a>
           </div>
         </div>
       </div>
-    </section>
+    </div>
     <footer
       class="container-fluid text-center mt-auto py-3"
       id="footer"
     ></footer>
     <script src="/public/js/template-renderer.js"></script>
-    <script src="mypage.js"></script>
+    <script src="adminpage.js"></script>
   </body>
 </html>
