--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="cart.css" />
-    <script src="cart.js" type="module" defer></script>
+    <link rel="stylesheet" href="order.css" />
+    <script src="order.js" type="module" defer></script>
     <title>쇼핑-n팀/장바구니</title>
 </head>
 
