--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -31,10 +31,11 @@
         </div>
 
         <div class="addContainer">
-            <button type="button" class="btn btn-outline-secondary add" onclick="location.href='/admin/post'">추가</button>
-           
+            <button type="button" class="btn btn-outline-secondary add"
+                onclick="location.href='/admin/post'">추가</button>
+
         </div>
-    
+
         <footer class="container-fluid text-center mt-auto py-3" id="footer"></footer>
     </div>
 </body>
