--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -1,51 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="cart.css" />
     <script src="cart.js" type="module" defer></script>
-    <title>쇼핑-n팀/장바구니</title>
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="cart.css" />
+    <link rel="stylesheet" href="/public/css/public.css" />
+    <title></title>
+  </head>
 
-<body>
-    <header>
-        <div id="logoDiv">logo</div>
-        <div id="logoDiv">개발세발네발🐶</div>
-    </header>
-    <main>
+  <body>
+    <div class="pageWraper">
+      <nav
+        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+        id="nav"
+      ></nav>
+      <main>
         <div id="cartDiv">
-            <span id="cartForm">orderForm</span>
-            <div id="cartHeader">
-                <label class="checkbox">
-                <input type="checkbox" id="allSelectCheckbox" checked> 
-                <p>전체선택</p>
-                </label>
-                <p> | </p>
-                <label class="delete-part" id="partialDeleteLabel">
-                <p>선택삭제</p>
-                </label>
-            </div>
-            <div id="itemContainer">
-            </div>
-            <div id="cartSummery">
-                <dl>
-                    <dt>상품수</dt>
-                    <dd id="itemCountAll"></dd>
-                    <dt>상품금액</dt>
-                    <dd id="itemPriceAll"></dd>
-                    <dt>배송비</dt>
-                    <dd>3000</dd>
-                    <dt>총 결제금액</dt>
-                    <dd id="totalPrice"></dd>
-                </dl>
-                <button type="button" class="button" id="submitButton">결제하기</button>
-            </div>
+          <span id="cartForm">orderForm</span>
+          <div id="cartHeader">
+            <label class="checkbox">
+              <input type="checkbox" id="allSelectCheckbox" checked />
+              <p>전체선택</p>
+            </label>
+            <p>|</p>
+            <label class="delete-part" id="partialDeleteLabel">
+              <p>선택삭제</p>
+            </label>
+          </div>
+          <div id="itemContainer"></div>
+          <div id="cartSummery">
+            <dl>
+              <dt>상품수</dt>
+              <dd id="itemCountAll"></dd>
+              <dt>상품금액</dt>
+              <dd id="itemPriceAll"></dd>
+              <dt>배송비</dt>
+              <dd>3000</dd>
+              <dt>총 결제금액</dt>
+              <dd id="totalPrice"></dd>
+            </dl>
+            <button type="button" class="button" id="submitButton">
+              결제하기
+            </button>
+          </div>
         </div>
-
-    </main>
-</body>
-
+      </main>
+      <footer
+        class="container-fluid text-center mt-auto py-3"
+        id="footer"
+      ></footer>
+    </div>
+  </body>
+  <script src="/public/js/template-renderer.js"></script>
 </html>
