--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="cart.js" type="module" defer></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +15,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script src="cart.js" type="module" defer></script>
     <link rel="stylesheet" href="cart.css" />
     <link rel="stylesheet" href="/public/css/public.css" />
     <title></title>
@@ -28,33 +28,45 @@
         id="nav"
       ></nav>
       <main>
-        <div id="cartDiv">
-          <span id="cartForm">orderForm</span>
-          <div id="cartHeader">
-            <label class="checkbox">
-              <input type="checkbox" id="allSelectCheckbox" checked />
-              <p>전체선택</p>
-            </label>
-            <p>|</p>
-            <label class="delete-part" id="partialDeleteLabel">
-              <p>선택삭제</p>
-            </label>
-          </div>
-          <div id="itemContainer"></div>
-          <div id="cartSummery">
-            <dl>
-              <dt>상품수</dt>
-              <dd id="itemCountAll"></dd>
-              <dt>상품금액</dt>
-              <dd id="itemPriceAll"></dd>
-              <dt>배송비</dt>
-              <dd>3000</dd>
-              <dt>총 결제금액</dt>
-              <dd id="totalPrice"></dd>
-            </dl>
-            <button type="button" class="button" id="submitButton">
-              결제하기
-            </button>
+        <div class="container text-center" id="container">
+          <h1 class="mt-3 mb-4">장바구니</h1>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-9">
+                <div class="mb-2">
+                  <label class="checkbox">
+                    <input type="checkbox" id="allSelectCheckbox" checked />
+                    <span class="me-5 btn btn-danger">전체선택</span>
+                  </label>
+                  <label class="delete-part" id="partialDeleteLabel">
+                    <p class="ms-5 mb-0 btn btn-secondary">선택삭제</p>
+                  </label>
+                </div>
+                <div id="itemContainer"></div>
+              </div>
+              <div class="col-3 mt-5">
+                <div id="cartDiv mt-2">
+                  <h3 id="cartForm">주문 내역 확인</h3>
+                  <div id="cartHeader"></div>
+
+                  <div id="cartSummary">
+                    <dl>
+                      <dt>상품수</dt>
+                      <dd id="itemCountAll"></dd>
+                      <dt>상품금액</dt>
+                      <dd id="itemPriceAll"></dd>
+                      <dt>배송비</dt>
+                      <dd>3,000</dd>
+                      <dt>총 결제금액</dt>
+                      <dd id="totalPrice"></dd>
+                    </dl>
+                    <button type="button" class="button" id="submitButton">
+                      결제하기
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </main>
