--- a/src/views/userOrder/userOrder.html
+++ b/src/views/userOrder/userOrder.html
@@ -17,20 +17,21 @@
     <div class="pageWraper">
         <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
         <div class="container text-center">
+            <span>주문 조회</span>
+            <hr>
             <div class="row">
                 <div class="col-0.2"></div>
                 <div class="col-11.6" id="usersConainer">
+                   
 
                     <table class="table table-hover table-bordered" style="table-layout: fixed">
 
                         <thead>
                             <tr>
-                                <th scope="col" width="80rem">ㄴ이ㅏㄴㅇ</th>
-                                <th scope="col" width="100rem">이름</th>
-                                <th scope="col" width="150rem">전화번호</th>
-                                <th scope="col" width="350rem">주소</th>
-                                <th scope="col" width="80rem">상품 개수</th>
-                                <th scope="col" width="120rem">배송현황</th>
+                                <th scope="col" width="100rem">날짜</th>
+                                <th scope="col" width="250rem">주문정보</th>
+                                <th scope="col" width="120rem">상태</th>
+                                <th scope="col" width="120rem">신청</th>
                             </tr>
                         </thead>
                         <tbody id="orderList">
@@ -44,10 +45,10 @@
                     <div style="display: flex;">
                         <a class="btn btn-danger ms-5" href="javascript:history.back()">뒤로가기</a>
 
-                        <div class="moveBtn">
+                        <!-- <div class="moveBtn">
                             <button type="button" id="deleveryBtn" class="btn btn-danger">배송 중</button>
                             <button type="button" id="completeBtn" class="btn btn-danger">배송 완료</button>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
