--- a/src/views/adminOrder/adminOrder.html
+++ b/src/views/adminOrder/adminOrder.html
@@ -91,6 +91,6 @@
       ></footer>
     </div>
   </body>
-  <script src="adminOrder.js" type="moduel" defer></script>
+  <script src="adminOrder.js" type="module" defer></script>
   <script src="/public/js/template-renderer.js"></script>
 </html>
