--- a/src/views/userOrder/userOrder.html
+++ b/src/views/userOrder/userOrder.html
@@ -66,6 +66,6 @@
 
 </body>
 <script src="/public/js/template-renderer.js"></script>
-<script src="userOrder.js"></script>
+<script src="userOrder.js" type="module" defer></script>
 
 </html>
