fix: 버그 발생, pull 금지!

--- a/src/views/404/404.html
+++ b/src/views/404/404.html
@@ -21,7 +21,10 @@
     <div class="container">
       <div class="container-fluid text-center">
         <div class="row mt-4">
-          <div class="col-12"><h2>상품 상세 정보</h2></div>
+          <div class="col-12"><h2>페이지를 찾을 수 없습니다,,,,</h2></div>
+          <div class="col-12">
+            <h2>기왕 이렇게 된 거 짤이라도 보고 가시죠 🙏</h2>
+          </div>
         </div>
         <hr />
         <div class="row mt-4">
