--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -44,9 +44,9 @@
                 </div>
                 <div id="itemContainer"></div>
               </div>
-              <div class="col-3 mt-5">
+              <div class="col-3 mt-5" id="summary">
                 <div id="cartDiv mt-2">
-                  <h3 id="cartForm">주문 내역 확인</h3>
+                  <h3 id="cartForm" class="mt-4">주문 내역 확인</h3>
                   <div id="cartHeader"></div>
 
                   <div id="cartSummary">
