--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -21,35 +21,69 @@
   </head>
 
   <body class="min-vh-100">
-    <nav
-      class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
-      id="nav"
-    ></nav>
+    <div class="pageWraper">
+      <nav
+        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+        id="nav"
+      ></nav>
 
-    <section class="container w-100 mt-5">
-      <div
-        class="container-fluid d-flex text-center justify-content-center ps-5"
-      >
-        <div class="row" id="menuContainer">
-          <div class="d-flex flex-row">
-            <a href="/mypage/info">
-              <div class="box btn btn-secondary" id="">내 정보 관리</div></a
-            >
-            <a href="/mypage/order"
-              ><div class="box btn btn-secondary mx-5" id="">배송 조회</div></a
-            >
-            <a href="/cart"
-              ><div class="box btn btn-secondary" id="">장바구니</div></a
-            >
+      <section class="container w-100">
+        <div class="container">
+          <div class="container-fluid mt-5">
+            <div class="row mt-5">
+              <div class="col-6 d-flex justify-content-center">
+                <a href="/mypage/info">
+                  <div class="box btn btn-secondary" id="">
+                    <i class="fa-solid fa-circle-user" style="font-size: 40px">
+                      내 정보 관리</i
+                    >
+                  </div>
+                </a>
+              </div>
+              <div class="col-6 d-flex justify-content-center">
+                <a href="/cart">
+                  <div class="box btn btn-secondary" id="">
+                    <i class="fa-solid fa-bag-shopping" style="font-size: 40px">
+                      장바구니
+                    </i>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="row mt-5">
+              <div class="col-6 d-flex justify-content-center">
+                <a href="/mypage/orders">
+                  <div class="box btn btn-secondary" id="">
+                    <i class="fa-solid fa-paste" style="font-size: 40px"
+                      >주문 조회</i
+                    >
+                  </div>
+                </a>
+              </div>
+              <div class="col-6 d-flex justify-content-center">
+                <a href="/admin/orders">
+                  <div class="box btn btn-secondary" id="">
+                    <i
+                      class="fa-solid fa-circle-question"
+                      style="font-size: 40px"
+                    >
+                      비회원<br />
+                      주문 조회</i
+                    >
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <footer
-      class="container-fluid text-center mt-auto py-3"
-      id="footer"
-    ></footer>
-    <script src="/public/js/template-renderer.js"></script>
-    <script type="module" src="mypage.js" defer></script>
+      </section>
+      <footer
+        class="container-fluid text-center mt-auto py-3"
+        id="footer"
+      ></footer>
+    </div>
   </body>
+  <script src="/public/js/template-renderer.js"></script>
+  <script type="module" src="mypage.js" defer></script>
 </html>
