--- a/src/views/orderLookup/orderLookup.html
+++ b/src/views/orderLookup/orderLookup.html
@@ -4,19 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>주문 조회</title>
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <!-- bulma css 관련 -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
+    <title></title>
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
@@ -35,51 +23,60 @@
     ></script>
 
     <script src="orderLookup.js" type="module" defer></script>
-
     <link rel="stylesheet" href="orderLookup.css" />
+    <link rel="stylesheet" href="/public/css/public.css" />
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top mb-3"
-      id="nav"
-    ></nav>
+    <div class="pageWraper">
+      <nav
+        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+        id="nav"
+      ></nav>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-8 mt-4">
+            <form class="mt-5" id="checkOrderForm">
+              <label class="label" for="orderCode">주문 코드</label>
+              <div class="control">
+                <input
+                  class="input"
+                  id="orderCode"
+                  type="orderCode"
+                  placeholder="주문 코드를 입력해주세요!"
+                  autocomplete="on"
+                />
+              </div>
 
-    <form class="mt-5" id="checkOrderForm">
-      <label class="label" for="orderCode">주문 코드</label>
-      <div class="control">
-        <input
-          class="input"
-          id="orderCode"
-          type="orderCode"
-          placeholder="주문 코드"
-          autocomplete="on"
-        />
+              <label class="label" for="phoneNumber">전화번호</label>
+              <div class="control">
+                <input
+                  class="input"
+                  id="phoneNumber"
+                  type="phoneNumber"
+                  placeholder="전화번호를 입력하세요!"
+                  autocomplete="on"
+                />
+              </div>
+
+              <button
+                class="button is-fullwidth btn btn-primary mt-4"
+                id="submitButton"
+              >
+                조회
+              </button>
+            </form>
+            <div id="checkRes"></div>
+          </div>
+          <div class="col-2"></div>
+        </div>
       </div>
 
-      <label class="label" for="phoneNumber">전화번호</label>
-      <div class="control">
-        <input
-          class="input"
-          id="phoneNumber"
-          type="phoneNumber"
-          placeholder="전화번호"
-          autocomplete="on"
-        />
-      </div>
-
-      <button
-        class="button is-fullwidth btn btn-primary mt-4"
-        id="submitButton"
-      >
-        조회
-      </button>
-    </form>
-
-    <div id="checkRes"></div>
-    <footer
-      class="container-fluid text-center fixed-bottom mb-4"
-      id="footer"
-    ></footer>
-    <script src="/public/js/template-renderer.js"></script>
+      <footer
+        class="container-fluid text-center mt-auto py-3"
+        id="footer"
+      ></footer>
+    </div>
   </body>
+  <script src="/public/js/template-renderer.js"></script>
 </html>
